--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ body{
     margin: 0px;
 }
 
+html {
+    scroll-behavior: smooth;
+}
 .header {
     background-color: #121212;
     text-align: center;
